--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@
     align-items: center;
     text-align: center;
   } */
-  h1 {
+  .percent h1 {
     font-size: 1.5rem;
     color: white;
     font-weight: 600;
